a1/brendan_gordon/TEST_PROGRAMS/invalidtype/shabbir_hussain/prog4.min
var x: int;
var x: string;

x=0;

